kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-app
  namespace: interview-lab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: interview-app
  template:
    metadata:
      labels:
        app: interview-app
    spec:
      containers:
        - name: interview-app
          image: harbor.proxbenovh.cloud/devops-project-harbor/accenture-interview-app:2f0406abee7a9f1d81220a6920556c78a7904cb7
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
