kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interview-app
  namespace: interview-lab
spec:
  selector:
    app: interview-app
  ports:
    - port: 80
      targetPort: 80
