kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-api
  namespace: interview-lab
spec:
  ingressClassName: traefik
  rules:
    - host: spring-api.soria-ai.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: interview-app
                port:
                  number: 80
